--- a/UAV-IQ-Marketing/app/scss/main.scss
+++ b/UAV-IQ-Marketing/app/scss/main.scss
@@ -542,8 +542,8 @@
         height: 80px;
       }
     }
-    .nav{
 
+    .nav{
       .nav-item{
         a{
           color:#FFF;
@@ -561,7 +561,7 @@
         background-color: #fff;
         position: absolute;
         width: 100%;
-        top: 110px;
+        top: 161px;
         left: 0;
 
         .nav-item{
@@ -648,4 +648,5 @@
 
   @import "comoponets/wineflight";
   @import "comoponets/datacollection";
-  @import "comoponets/instafarm"
+  @import "comoponets/instafarm";
+  @import "comoponets/ourProducts"
