--- a/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
@@ -38,16 +38,16 @@
         }
 
         h1{
-          font-size: 50px;
+          // font-size: 50px;
           text-align: center;
 
           @media only screen and (max-device-width: 1024px) {
-            font-size: 70px !important;
+            // font-size: 70px !important;
           }
         }
 
         p{
-          font-size: 25px;
+          // font-size: 25px;
           text-align: center;
         }
 
@@ -58,15 +58,15 @@
             border: none;
             border-radius:0;
             padding: 10px 35px;
-            font-size: 45px;
+            // font-size: 45px;
           }
 
           span{
             display: block;
-            font-size:11px;
+            // font-size:11px;
 
             @media only screen and (min-device-width: 1024px) {
-              font-size:15px;
+              // font-size:15px;
             }
           }
         }
@@ -93,11 +93,11 @@
         margin-bottom:20px;
 
         .section-header{
-          font-size: 35px ;
+          // font-size: 35px ;
           margin-bottom:20px;
         }
         .section-sub-header{
-          font-size: 30px;
+          // font-size: 30px;
         }
     }
 
@@ -107,7 +107,7 @@
         padding:0 20px;
 
         @media only screen and (max-device-width: 768px) {
-          font-size: 45px;
+          // font-size: 45px;
         }
       }
 
@@ -136,14 +136,14 @@
           font-weight: bold;
 
           @media only screen and (max-device-width: 768px) {
-            font-size: 45px;
+            // font-size: 45px;
           }
         }
 
         p{
           text-align: center;
           @media only screen and (max-device-width: 768px) {
-            font-size: 30px;
+            // font-size: 30px;
           }
         }
 
@@ -179,21 +179,21 @@
           border: none;
           border-radius:0;
           padding: 10px 35px;
-          font-size: 15px;
+          // font-size: 15px;
         }
       }
 
       .section-header{
 
         @media only screen and (max-device-width: 1024px) {
-          font-size:45px;
+          // font-size:45px;
         }
       }
 
       ul{
         margin-bottom:75px;
         li{
-          font-size:20px;
+          // font-size:20px;
         }
       }
 
@@ -202,20 +202,20 @@
         position: relative;
 
         h2{
-          font-size:30px;
+          // font-size:30px;
           text-align: center;
 
           @media only screen and (max-device-width: 768px) {
-            font-size: 45px;
+            // font-size: 45px;
           }
         }
 
         p{
-          font-size:20px;
+          // font-size:20px;
           text-align: center;
 
           @media only screen and (max-device-width: 768px) {
-            font-size: 30px;
+            // font-size: 30px;
           }
         }
 
@@ -242,7 +242,7 @@
         padding:0 20px;
 
         @media only screen and (max-device-width: 1024px) {
-          font-size:45px;
+          // font-size:45px;
         }
       }
 
@@ -268,20 +268,20 @@
         }
 
         h2{
-          font-size:20px;
+          // font-size:20px;
           text-align: center;
 
           @media only screen and (max-device-width: 768px) {
-            font-size: 45px;
+            // font-size: 45px;
           }
         }
 
         p{
-          font-size:20px;
+          // font-size:20px;
           text-align: center;
 
           @media only screen and (max-device-width: 768px) {
-            font-size: 30px;
+            // font-size: 30px;
           }
         }
         //
@@ -308,7 +308,7 @@
         padding:0 20px;
 
         @media only screen and (max-device-width: 768px) {
-          font-size: 45px;
+          // font-size: 45px;
         }
       }
 
@@ -318,12 +318,12 @@
         position: relative;
 
         h2{
-          font-size:40px;
+          // font-size:40px;
           text-align: center;
         }
 
         p{
-          font-size:30px;
+          // font-size:30px;
           text-align: center;
         }
 
@@ -345,7 +345,7 @@
           overflow: hidden;
           padding: 0;
           li{
-            font-size: 30px;
+            // font-size: 30px;
             // float: right;
             padding-left:75px;
             position: relative;
@@ -353,7 +353,7 @@
             min-height: 75px;
 
             @media only screen and (min-device-width: 1024px) {
-              font-size: 20px;
+              // font-size: 20px;
               padding-left:60px;
             }
 
@@ -419,12 +419,12 @@
         position: relative;
 
         h2{
-          font-size:40px;
+          // font-size:40px;
           text-align: center;
         }
 
         p{
-          font-size:30px;
+          // font-size:30px;
           text-align: center;
         }
 
@@ -446,7 +446,7 @@
           overflow: hidden;
           padding: 0;
           li{
-            font-size: 30px;
+            // font-size: 30px;
             // float: right;
             padding-left:75px;
             position: relative;
@@ -454,7 +454,7 @@
             min-height: 75px;
 
             @media only screen and (min-device-width: 1024px) {
-              font-size: 20px;
+              // font-size: 20px;
               padding-left:60px;
             }
 
@@ -517,7 +517,7 @@
         div{
           margin:10px 0;
           label{
-            font-size:25px;
+            // font-size:25px;
           }
 
           textarea{
@@ -532,7 +532,7 @@
             color:#FFF;
             background-color:#ADADAD;
             height:50px;
-            font-size:20px;
+            // font-size:20px;
             border:none;
             padding: 1px 20px;
 
@@ -544,7 +544,7 @@
 
         button{
           background-color: #A3CB00;
-          font-size: 25px;
+          // font-size: 25px;
           padding: 10px 90px;
           border: none;
           float: left;
@@ -552,8 +552,7 @@
         }
 
         .g-recaptcha{
-          float: right;
-          margin: 0;
+          margin: 0 0 20px 0;
           div{
             margin: 0;
           }
@@ -566,13 +565,13 @@
       position: relative;
 
       h4{
-        font-size:12px;
+        // font-size:12px;
         color:#ADADAD;
         text-align: center;
       }
       ul{
         margin-bottom: 20px;
-        font-size:10px;
+        // font-size:10px;
         .first{
           font-weight:bold;
         }
@@ -607,7 +606,7 @@
       padding:0 20px;
 
       @media only screen and (max-device-width: 1024px) {
-        font-size:45px;
+        // font-size:45px;
       }
     }
 
@@ -616,20 +615,20 @@
       position: relative;
 
       h2{
-        font-size:30px;
+        // font-size:30px;
         text-align: center;
 
         @media only screen and (max-device-width: 768px) {
-          font-size: 45px;
+          // font-size: 45px;
         }
       }
 
       p{
-        font-size:20px;
+        // font-size:20px;
         text-align: center;
 
         @media only screen and (max-device-width: 768px) {
-          font-size: 30px;
+          // font-size: 30px;
         }
       }
 
@@ -656,7 +655,7 @@
       padding:0 20px;
 
       @media only screen and (max-device-width: 1024px) {
-        font-size:45px;
+        // font-size:45px;
       }
     }
 
@@ -665,15 +664,15 @@
       position: relative;
 
       h2{
-        font-size:30px;
+        // font-size:30px;
         text-align: center;
 
         @media only screen and (max-device-width: 768px) {
-          font-size: 45px;
+          // font-size: 45px;
         }
 
         @media only screen and (min-device-width: 1024px) {
-          font-size:20px;
+          // font-size:20px;
         }
       }
 
@@ -683,14 +682,14 @@
 
         .btn{
           width: 100%;
-          font-size: 35px;
+          // font-size: 35px;
           background-color:#A3CB00;
           border: none;
           border-radius:0;
           padding: 10px 35px;
 
           @media only screen and (min-device-width: 1024px) {
-            font-size:20px;
+            // font-size:20px;
           }
         }
       }
