--- a/UAV-IQ-Marketing/app/scss/comoponets/wineflight.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/wineflight.scss
@@ -38,16 +38,16 @@
         }
 
         h1{
-          font-size: 50px;
+          // font-size: 50px;
           text-align: center;
 
           @media only screen and (max-device-width: 1024px) {
-            font-size: 70px !important;
+            // font-size: 70px !important;
           }
         }
 
         p{
-          font-size: 25px;
+          // font-size: 25px;
           text-align: center;
         }
 
@@ -58,15 +58,15 @@
             border: none;
             border-radius:0;
             padding: 10px 35px;
-            font-size: 45px;
+            // font-size: 45px;
           }
 
           span{
             display: block;
-            font-size:11px;
+            // font-size:11px;
 
             @media only screen and (min-device-width: 1024px) {
-              font-size:15px;
+              // font-size:15px;
             }
           }
         }
@@ -93,11 +93,11 @@
         margin-bottom:20px;
 
         .section-header{
-          font-size: 35px ;
+          // font-size: 35px ;
           margin-bottom:20px;
         }
         .section-sub-header{
-          font-size: 30px;
+          // font-size: 30px;
         }
     }
 
@@ -107,7 +107,7 @@
         padding:0 20px;
 
         @media only screen and (max-device-width: 768px) {
-          font-size: 45px;
+          // font-size: 45px;
         }
       }
 
@@ -120,14 +120,14 @@
           font-weight: bold;
 
           @media only screen and (max-device-width: 768px) {
-            font-size: 45px;
+            // font-size: 45px;
           }
         }
 
         p{
           text-align: center;
           @media only screen and (max-device-width: 768px) {
-            font-size: 30px;
+            // font-size: 30px;
           }
         }
 
@@ -159,7 +159,7 @@
         padding:0 20px;
 
         @media only screen and (max-device-width: 1024px) {
-          font-size:45px;
+          // font-size:45px;
         }
       }
 
@@ -168,20 +168,20 @@
         position: relative;
 
         h2{
-          font-size:30px;
+          // font-size:30px;
           text-align: center;
 
           @media only screen and (max-device-width: 768px) {
-            font-size: 45px;
+            // font-size: 45px;
           }
         }
 
         p{
-          font-size:20px;
+          // font-size:20px;
           text-align: center;
 
           @media only screen and (max-device-width: 768px) {
-            font-size: 30px;
+            // font-size: 30px;
           }
         }
 
@@ -208,7 +208,7 @@
         padding:0 20px;
 
         @media only screen and (max-device-width: 768px) {
-          font-size: 45px;
+          // font-size: 45px;
         }
       }
 
@@ -218,12 +218,12 @@
         position: relative;
 
         h2{
-          font-size:40px;
+          // font-size:40px;
           text-align: center;
         }
 
         p{
-          font-size:30px;
+          // font-size:30px;
           text-align: center;
         }
 
@@ -245,7 +245,7 @@
           overflow: hidden;
           padding: 0;
           li{
-            font-size: 30px;
+            // font-size: 30px;
             // float: right;
             padding-left:75px;
             position: relative;
@@ -253,7 +253,7 @@
             min-height: 75px;
 
             @media only screen and (min-device-width: 1024px) {
-              font-size: 20px;
+              // font-size: 20px;
               padding-left:60px;
             }
 
@@ -319,12 +319,12 @@
         position: relative;
 
         h2{
-          font-size:40px;
+          // font-size:40px;
           text-align: center;
         }
 
         p{
-          font-size:30px;
+          // font-size:30px;
           text-align: center;
         }
 
@@ -346,7 +346,7 @@
           overflow: hidden;
           padding: 0;
           li{
-            font-size: 30px;
+            // font-size: 30px;
             // float: right;
             padding-left:75px;
             position: relative;
@@ -354,7 +354,7 @@
             min-height: 75px;
 
             @media only screen and (min-device-width: 1024px) {
-              font-size: 20px;
+              // font-size: 20px;
               padding-left:60px;
             }
 
@@ -417,7 +417,7 @@
         div{
           margin:10px 0;
           label{
-            font-size:25px;
+            // font-size:25px;
           }
 
           textarea{
@@ -432,7 +432,7 @@
             color:#FFF;
             background-color:#ADADAD;
             height:50px;
-            font-size:20px;
+            // font-size:20px;
             border:none;
             padding: 1px 20px;
 
@@ -444,7 +444,7 @@
 
         button{
           background-color: #A3CB00;
-          font-size: 25px;
+          // font-size: 25px;
           padding: 10px 90px;
           border: none;
           float: left;
@@ -452,8 +452,7 @@
         }
 
         .g-recaptcha{
-          float: right;
-          margin: 0;
+          margin: 0 0 20px 0;
           div{
             margin: 0;
           }
@@ -466,13 +465,13 @@
       position: relative;
 
       h4{
-        font-size:12px;
+        // font-size:12px;
         color:#ADADAD;
         text-align: center;
       }
       ul{
         margin-bottom: 20px;
-        font-size:10px;
+        // font-size:10px;
         .first{
           font-weight:bold;
         }
@@ -507,7 +506,7 @@
       padding:0 20px;
 
       @media only screen and (max-device-width: 1024px) {
-        font-size:45px;
+        // font-size:45px;
       }
     }
 
@@ -516,20 +515,20 @@
       position: relative;
 
       h2{
-        font-size:30px;
+        // font-size:30px;
         text-align: center;
 
         @media only screen and (max-device-width: 768px) {
-          font-size: 45px;
+          // font-size: 45px;
         }
       }
 
       p{
-        font-size:20px;
+        // font-size:20px;
         text-align: center;
 
         @media only screen and (max-device-width: 768px) {
-          font-size: 30px;
+          // font-size: 30px;
         }
       }
 
@@ -556,7 +555,7 @@
       padding:0 20px;
 
       @media only screen and (max-device-width: 1024px) {
-        font-size:45px;
+        // font-size:45px;
       }
     }
 
@@ -565,15 +564,15 @@
       position: relative;
 
       h2{
-        font-size:30px;
+        // font-size:30px;
         text-align: center;
 
         @media only screen and (max-device-width: 768px) {
-          font-size: 45px;
+          // font-size: 45px;
         }
 
         @media only screen and (min-device-width: 1024px) {
-          font-size:20px;
+          // font-size:20px;
         }
       }
 
@@ -583,14 +582,14 @@
 
         .btn{
           width: 100%;
-          font-size: 35px;
+          // font-size: 35px;
           background-color:#A3CB00;
           border: none;
           border-radius:0;
           padding: 10px 35px;
 
           @media only screen and (min-device-width: 1024px) {
-            font-size:20px;
+            // font-size:20px;
           }
         }
       }
