--- a/UAV-IQ-Marketing/app/scss/main.scss
+++ b/UAV-IQ-Marketing/app/scss/main.scss
@@ -8,15 +8,24 @@
     background-repeat: no-repeat;
     max-height:800px;
     overflow: hidden;
+    background-size: 110%;
+
+    @media only screen and (max-device-width: 1024px) {
+      background-size: 185%;
+    }
 
     .container{
       color:#FFF;
+
+      @media only screen and (min-device-width: 1024px) {
+        padding-left: 75px;
+      }
 
       h1{
         font-size: 50px;
 
         @media only screen and (max-device-width: 1024px) {
-          font-size: 70px !important;
+          font-size: 60px !important;
         }
       }
 
@@ -40,6 +49,19 @@
 
       .banner{
         width:100%;
+
+        @media only screen and (min-device-width: 1025px) {
+          display: none;
+        }
+      }
+    }
+    .ipad{
+      img{
+        width: 100%;
+      }
+
+      @media only screen and (max-device-width: 1024px) {
+        display: none;
       }
     }
   }
@@ -105,7 +127,7 @@
       margin-top: 25px;
       width: 100%;
       color: #ADADAD;
-      font-size: 30px;
+      font-size: 70px;
     }
   }
 
@@ -137,14 +159,14 @@
         width: 100%;
 
         @media only screen and (min-device-width: 1024px) {
-          // left:0;
           display: block !important;
+          padding: 0px 12%;
         }
       }
 
       .second-asset{
         padding: 35px 0;
-        height: 1935px;
+        height: 920px;
         margin: 0 auto;
 
         @media only screen and (min-device-width: 1024px) {
@@ -258,7 +280,8 @@
     background-repeat: no-repeat;
     background-size: 100% 100%;
     .option{
-      padding:40px;
+      padding: 80px;
+
       div{
         padding:40px;
         background: rgba(0, 0, 0, 0.5);
@@ -502,8 +525,8 @@
       }
 
       .g-recaptcha{
-        float: right;
-        margin: 0;
+        // float: right;
+        margin: 0 0 20px 0;
         div{
           margin: 0;
         }
@@ -512,10 +535,16 @@
   }
 
   nav{
-    position: absolute !important;
+    position: fixed !important;
     width: 100%;
     padding:0 20px;
     padding-top:53px;
+    -webkit-transition: all .3s;/* Safari */
+    -moz-transition: all .3s;/*Firefox*/
+    -ms-transition: all .3s;/*IE10+*/
+    -o-transition: all .3s;/*Opera*/
+    transition: all .3s;
+
 
     .droneOperators{
       position: absolute;
@@ -588,14 +617,14 @@
         bottom: 2px;
         right:0;
         height: 110px;
-        width: 50px;
+        width: 70px;
         background-color:#FFF;
         color:#A3CB00;
 
         button{
           height:100%;
           width:100%;
-          font-size: 25px;
+          font-size: 40px;
         }
       }
 
@@ -642,6 +671,18 @@
       .show{
         height: auto;
         overflow: auto;
+      }
+    }
+  }
+
+  .changeHeader{
+    background:#FFF;
+
+    .nav-item{
+      a{
+        color:#7F5E3B !important;
+        padding-top: 45px;
+        padding-bottom: 45px;
       }
     }
   }
