--- a/UAV-IQ-Marketing/app/scss/comoponets/datacollection.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/datacollection.scss
@@ -2,7 +2,7 @@
   font-family: 'Raleway', sans-serif;
 
     .jumbotron{
-      padding-top: 184px !important;
+      padding-top: 210px !important;
       background-color:#fff;
       // background-image: url('../img/TV-Colchagua.png');
       background-size: 100%;
@@ -31,7 +31,7 @@
           text-align: center;
 
           @media only screen and (max-device-width: 1024px) {
-            font-size: 70px !important;
+            font-size: 60px !important;
           }
         }
 
@@ -122,7 +122,7 @@
           width:100%;
           padding: 0 100px;
 
-          @media only screen and (min-device-width: 1024px) {
+          @media only screen and (max-device-width: 1024px) {
             padding:0px 70px;
           }
 
@@ -137,14 +137,31 @@
             border: none;
             border-radius:0;
             padding: 10px 35px;
-            font-size: 45px;
+            font-size: 25px;
+
+            @media only screen and (max-device-width: 1024px) {
+              font-size: 25px;
+            }
+
+            @media only screen and (max-device-width: 768px) {
+              font-size: 40px;
+            }
           }
+        }
+
+        &:last-child{
+          margin-top:80px;
+          margin-bottom:40px;
         }
       }
     }
 
     .work{
       padding: 20px 70px;
+
+      @media only screen and (min-device-width: 1024px) {
+        padding: 20px 15px;
+      }
 
       .section-header{
         text-align: center;
@@ -187,10 +204,10 @@
 
         img{
           width:100%;
-          padding: 0 100px;
+          padding: 0 50px;
 
-          @media only screen and (min-device-width: 1024px) {
-            padding:0px 70px;
+          @media only screen and (max-device-width: 1024px) {
+            padding: 0px 15px;
           }
 
           @media only screen and (max-device-width: 768px) {
