--- a/UAV-IQ-Marketing/app/scss/comoponets/wineflight.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/wineflight.scss
@@ -3,10 +3,9 @@
 
     .jumbotron{
       background-size: 120%;
-      padding-top: 184px !important;
-      background-color:#fff;
-      // background-image: url('../img/TV-Colchagua.png');
+      padding-top: 210px !important;
       background-repeat: no-repeat;
+      background-attachment: fixed;
       background-color:#000;
       max-height:800px;
       overflow: hidden;
@@ -38,17 +37,17 @@
         }
 
         h1{
-          // font-size: 50px;
+          font-size: 50px;
           text-align: center;
 
           @media only screen and (max-device-width: 1024px) {
-            // font-size: 70px !important;
+            font-size: 60px !important;
           }
         }
 
         p{
-          // font-size: 25px;
           text-align: center;
+          font-size: 25px;
         }
 
         .button{
@@ -136,7 +135,7 @@
           padding: 0 100px;
 
           @media only screen and (min-device-width: 1024px) {
-            padding:0px 70px;
+            padding:0px 110px;
           }
 
           @media only screen and (max-device-width: 768px) {
