--- a/UAV-IQ-Marketing/app/scss/comoponets/datacollection.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/datacollection.scss
@@ -7,6 +7,7 @@
       // background-image: url('../img/TV-Colchagua.png');
       background-size: 100%;
       background-repeat: no-repeat;
+      background-attachment: fixed;
       background-color:#000;
       max-height:700px;
       overflow: hidden;
