--- a/UAV-IQ-Marketing/app/scss/comoponets/instafarm.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/instafarm.scss
@@ -7,6 +7,7 @@
       background-color:#fff;
       // background-image: url('../img/TV-Colchagua.png');
       background-repeat: no-repeat;
+      background-attachment: fixed;
       background-color:#000;
       max-height:800px;
       overflow: hidden;
