--- a/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
@@ -7,13 +7,14 @@
       background-color:#fff;
       // background-image: url('../img/TV-Colchagua.png');
       background-repeat: no-repeat;
+      background-attachment: fixed;
       background-color:#000;
       max-height:800px;
       overflow: hidden;
       position: relative;
 
       @media only screen and (max-device-width: 1024px) {
-        background-size: 142%;
+        background-size: 150%;
       }
 
       .app{
@@ -107,7 +108,7 @@
         padding:0 20px;
 
         @media only screen and (max-device-width: 768px) {
-          // font-size: 45px;
+          font-size: 45px;
         }
       }
 
@@ -136,14 +137,14 @@
           font-weight: bold;
 
           @media only screen and (max-device-width: 768px) {
-            // font-size: 45px;
+            font-size: 45px;
           }
         }
 
         p{
           text-align: center;
           @media only screen and (max-device-width: 768px) {
-            // font-size: 30px;
+            font-size: 20px;
           }
         }
 
@@ -156,7 +157,7 @@
           }
 
           @media only screen and (max-device-width: 768px) {
-            padding:0px 270px;
+            padding:0px 230px;
           }
         }
 
