additional style changes to the bacground paralax.

--- a/UAV-IQ-Marketing/app/css/main.css
+++ b/UAV-IQ-Marketing/app/css/main.css
@@ -101,6 +101,7 @@ button {
   .home #issue {
     background-image: url(../img/BG_zoom_level.png);
     background-repeat: no-repeat;
+    background-attachment: fixed;
     background-position: left bottom;
     background-size: 100%; }
     .home #issue .section-header {
