--- a/UAV-IQ-Marketing/app/scss/main.scss
+++ b/UAV-IQ-Marketing/app/scss/main.scss
@@ -154,6 +154,7 @@ button{
   #issue{
     background-image: url(../img/BG_zoom_level.png);
     background-repeat: no-repeat;
+    background-attachment: fixed;
     background-position: left bottom;
     background-size: 100%;
 
